--- a/index.html
+++ b/index.html
@@ -1,27 +1,332 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LinuxJpurny</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="lin">
-        <div class="left">LinuxJourney</div>
-        <div class="right">Language</div>
+      <div class="left">LinuxJourney</div>
+      <div class="right"><img src="https://linuxjourney.com/assets/flags/United_States_of_America-998fb392be75a6bf1d89eb60693ecb40e0e883596f16f02f76a8d2f718a2de7a.png" alt="">Language<select name="" id="count">
+        <!-- <option value="LANGUAGE">LANGAUAGE</option> -->
+        <option value="USA">USA</option>Language
+        <option value="FRANCE">FRANCE</option>
+        <option value="AUSTRALIA">AUSTRALIA</option>
+        <option value="GERMANEY">GERMANEY</option>
+        <option value="INDIA">INDIA</option>
+      </select></div>
     </div>
     <div class="main">
-        <div> <img src="https://linuxjourney.com/assets/jumbotron-60c93c2fc6bb16079b70fe2eccacaa05f2d6b002af4ff0667ddd8e283cbf81fd.png" alt="Linux image"></div>   
-        <p class="ip">Learn The Ways Of Linux-fu for free.</p> 
+      <div>
+        <img
+          src="https://linuxjourney.com/assets/jumbotron-60c93c2fc6bb16079b70fe2eccacaa05f2d6b002af4ff0667ddd8e283cbf81fd.png"
+          alt="Linux image"
+        />
+      </div>
+      <p class="ip">Learn The Ways Of Linux-fu for free.</p>
     </div>
     <div class="Suscribe">
-        <p>Get updates about new courses and lessons!</p>
-        <div>
-            <input type="text" placeholder="Email Address">
-            <button class="btn">Suscribe</button>
-        </div>
+      <p class="get">Get updates about new courses and lessons!</p>
+      <div>
+        <input class="email" type="text" placeholder="Email Address" />
+        <button class="btn">Suscribe</button>
+      </div>
+    </div>
+    <div class="grss">
+      <p>Grasshopper</p>
+    </div>
+    <!-- GRASS HOPPER FIRST FOUR IMG  -->
+
+    <div class="first">
+      <div class="firstimg">
+        <img class="fr"
+          src="https://linuxjourney.com/assets/getting-started-cd39013b87fac4b4b5d668752511f154a673adc94fad86c9be53f0016bf3bc35.png"
+          alt="img"
+        />
+        <p class="ptext">Getting STarted</p>
+        <p class="btext">
+          What is Linux?Get Started With Choosing 
+          a distribution and
+          installation.
+        </p>
+       </div>
+        <div class="Simage">
+        <img class="sr"
+          src="https://linuxjourney.com/assets/command-line-dd6a59e10b5ec94f43e805d35d8556dfd070c25871788dd8b5a09a536a477b0a.png"
+          alt="img"/>
+        <p class="ptext">Command Line</p>
+        <p class="btext">
+          Learn the Fundamental of the command line,navigating files,directories and more.
+        </p>
+       </div>
+       <div class="timage">
+        <img class="tr"
+          src="https://linuxjourney.com/assets/text-fu-622e3761a4638fdc72b7c21d2e6d41ae71861da119bdafe677a9bafa0627f1ca.png"
+          alt="img"/>
+        <p class="ptext">Text-FU</p>
+        <p class="btext">
+          Learn basic text manipulation and navigation.
+        </p>
+      </p>
+    </div>
+    <div class="fimage">
+     <img class="fr"
+       src="https://linuxjourney.com/assets/text-fu-advanced-384999618925a5ad54abb9113cfab05f5bd3f7e341d16aecbcbf1c83711e2378.png"
+       alt="img"/>
+     <p class="ptext">Advanced Text-Fu</p>
+     <p class="btext">
+      like a linux spider monkey with vim and emacs.
+     </p>
     </div>
     
-</body>
+
+  </div>
+
+  <!-- GRASS HOPPER SECOND LINE IMAGE -->
+  <div class="second">
+    <div class="secondfirstimg">
+      <img class="secondfradius"
+        src="https://linuxjourney.com/assets/user-management-11b3136e7e9f551e6efa2929fbef7b3f4693dd8e9d33f8db709c3415b6815dca.png"
+        alt="img"
+      />
+      <p class="ptext">User Managment</p>
+      <p class="btext">
+        Learn about roles and managment.
+      </p>
+     </div>
+      <div class="Secondsecondimage">
+      <img class="secondsecondradius"
+        src="https://linuxjourney.com/assets/access-6157a84d9ecc01b59ff9ed57040090948fc8851e60647033087af0f58d4236f4.png"
+        alt="img"/>
+      <p class="ptext">Permission</p>
+      <p class="btext">
+        Learn about Permissionlevels and modifying Permission.
+      </p>
+     </div>
+     <div class="secondthirdimage">
+      <img class=" secondthirdimgradius"
+        src="https://linuxjourney.com/assets/processes-bf5fd64c3ace61821e8378b9911ef0606de5721e178d319abdc443fb82c9547a.png"
+        alt="img"/>
+      <p class="ptext">Processes</p>
+      <p class="btext">
+        Learn about the running Processeson the system.
+      </p>
+    </p>
+  </div>
+  <div class="secondfourthimg">
+   <img class="secondfourthimgradius"
+     src="https://linuxjourney.com/assets/package-management-9a40f89dde6d2e2d861722093b97eadc3b852446125df64ea2ce344dc47ef00d.png"
+     alt="img"/>
+   <p class="ptext">Packages</p>
+   <p class="btext">
+    Learn all about the dpkg,apt-get rpm and yum package managment tools.
+   </p>
+  </div>
+  
+
+</div>
+  <!-- </div>
+  <! JOURNEYMAN NAME start here-->
+   <div> 
+    <p class="jname">Journeyman</p>
+   </div> 
+
+   <!-- JOURNYMAN NAME ENDS HERE -->
+
+
+  <!--JOURNEYMAN first image STARTS  FROM HERE  -->
+  
+  <div class="Journeyman">
+    <div class="jfirstimg">
+      <img class="jfradius"
+        src="https://linuxjourney.com/assets/devices-5088f49b6a0d4ce892e106ee1e837e401de62d8f1ee8648ac00bd9a0e9f576c2.png"
+        alt="img"
+      />
+      <p class="ptext">Devices</p>
+      <p class="btext">
+        Learn about Linux devices and how they inerract with the kernel and user space.
+      </p>
+     </div>
+     <!-- journeyman first img end here -->
+
+     <!-- journemy man secomd img start here -->
+      <div class="jmSecondsecondimage">
+      <img class="jmsecondsecondradius"
+        src="https://linuxjourney.com/assets/filesystem-6bfae474a9f31492fcc960a1c49ed97ac7d64038ddbde2d69258e3e7cd79f241.png"
+        alt="img"/>
+      <p class="ptext">The Filesystem</p>
+      <p class="btext">
+        Learn about the Linux lifesystem,the diffrent types of filesystem,partioning and more.
+      </p>
+     </div>
+     <div class="jmthirdimage">
+      <img class="thirdimgradius"
+        src="https://linuxjourney.com/assets/booting-32f576a824d0160350167ece5da8fb719edd1e814ecbfaec20f6da7d9f31bfa0.png"
+        alt="img"/>
+      <p class="ptext">Boot the system</p>
+      <p class="btext">
+        Learn about the stages of the linux boot process.
+      </p>
+    </p>
+  </div>
+  <div class="jmfourthimg">
+   <img class="jmfourthimgradius"
+     src="https://linuxjourney.com/assets/kernel-99533d3ebf83d9bb34e8971887d90acb259f72d0092aa1f628d6c7036bd62144.png"
+     alt="img"/>
+   <p class="ptext">Kernel</p>
+   <p class="btext">
+   THe most important part of the Linux system learn about how it works and how to configure it.
+   </p>
+  </div>
+</div>
+<!-- JOURNEY MAN LAST THREE START HERE -->
+<div class="jmlastthree">
+<div class="lastone">
+  <img class="lastoneradius"
+    src="https://linuxjourney.com/assets/init-36c89d8f5958b7a10251e5958735345be7997426ab3d6db3f84c4dc04a99f9af.png"
+    alt="img"
+  />
+  <p class="ptext">Init</p>
+  <p class="btext">
+    Learn about the diffrent init system,SysV,Upstart and systemd.
+  </p>
+ </div>
+  <div class="jmlastsecond">
+  <img class="jmlastsecondradius"
+    src="https://linuxjourney.com/assets/process-utilization-7cbd9417e89126a2548cb7ce59555fe53682fe00aa9e509840c4f22fa25b4d16.png"
+    alt="img"/>
+  <p class="ptext">Process Utilization</p>
+  <p class="btext">
+    Learn resource monitoring with top,load,averages,lostat and more!
+  </p>
+ </div>
+ <div class="jmlastthird">
+  <img class=" jmlastthirdradius"
+    src="https://linuxjourney.com/assets/logging-6a62164e665c33b2f4d0fa4d1a002a934c291ce3fa9eebb8398612256ddb5241.png"
+    alt="img"/>
+  <p class="ptext">Logging</p>
+  <p class="btext">
+    Learn about system logs and the /var/log directory.
+  </p>
+</p>
+</div>
+</div>
+ <!-- JOURNEY MAN ENDS HERE -->
+
+ <!-- NETWORKING NOMAD STARTS HERE -->
+
+ <div>
+  <p class="nomadname">Networking Nomad</p>
+ </div>
+<!-- network nomed start from here -->
+
+<div class="first">
+  <div class="firstimg">
+    <img class="fr"
+      src="https://linuxjourney.com/assets/network-sharing-160c16689bb42ee68a9047bb8e3741a00934d9e70cf5c9feb8caef9b62a0b8e8.png"
+      alt="img"
+    />
+    <p class="ptext">Network Sharing</p>
+    <p class="btext">
+      Learn about network sharing with rsync,scp,nf and more.
+
+    </p>
+   </div>
+    <div class="Simage">
+    <img class="sr"
+      src="https://linuxjourney.com/assets/network-fundamentals-23b42f49c6f57d45884285ffbfdf44127863ae96243eb51ce39fb139f585cab1.png"
+      alt="img"/>
+    <p class="ptext">Network Basics</p>
+    <p class="btext">
+      Learn about networking basics and the TCP/Ip model.
+    </p>
+   </div>
+   <div class="timage">
+    <img class="tr"
+      src="https://linuxjourney.com/assets/subnetting-419b4e0a930964af38188bb919aa65433e7c46e846637eee5e6e820191d63fbc.png"
+      alt="img"/>
+    <p class="ptext">SUbnetting</p>
+    <p class="btext">
+      Learn about subnets and how to do subnet arithmetic!.
+    </p>
+  </p>
+</div>
+<div class="fimage">
+ <img class="fr"
+   src="https://linuxjourney.com/assets/routing-1390297a37feb14fb6ab2434015d60a93c7d3caad58e6ab5ba358a70b4f5a170.png"
+   alt="img"/>
+ <p class="ptext">Routing</p>
+ <p class="btext">
+  Learn how packets are routed accross network!
+ </p>
+</div>
+
+
+</div>
+ 
+  
+<!-- nomad last three image -->
+<div class="second">
+  <div class="secondfirstimg">
+    <img class="secondfradius"
+      src="https://linuxjourney.com/assets/network-configuration-6677cdfe892728ed77e3c4a97e24f5dbcb98fc2b117495b12faec2e156b8f5ed.png"
+      alt="img"
+    />
+    <p class="ptext">Network config</p>
+    <p class="btext">
+      Learn about network configuration using Linux tools!
+    </p>
+   </div>
+    <div class="Secondsecondimage">
+    <img class="secondsecondradius"
+      src="https://linuxjourney.com/assets/network-troubleshooting-5551300f3d2be9d5b3c6165a001ee7861a4d78c7482b130e54d4127ef95cdc14.png"
+      alt="img"/>
+    <p class="ptext">Troublesshooting</p>
+    <p class="btext">
+      Learn about common networking tools to help you diagnose and troubleshoot issues!
+    </p>
+   </div>
+   <div class="secondthirdimage">
+    <img class=" secondthirdimgradius"
+      src="https://linuxjourney.com/assets/dns-ae93614cbe94c428f5f103fd842c2fc887e2e740b3a6bc119a9a37ce11e3faf8.png"
+      alt="img"/>
+    <p class="ptext">DNS</p>
+    <p class="btext">
+      Everything and more that you wanted to know about DNS.
+    </p>
+  </p>
+</div>
+</div>
+
+<footer>
+  <div class="foot">
+    <div >
+      <p class="Subscribe">Subscribe</p>
+      <p class="subtext">Get updates about new courses and lessons!</p>
+      <p class="slink"><a href="">Subscribe</a></p>
+    </div>
+    <div>
+    <p class="aboutus">About us</p>
+    <p class="aboutust">The knowlwdge gained here today was powered by the open-source community</p>
+    <p class="contrilink"><a href="">contribute and collaborate0</a></p>
+    </div>
+    <div>
+      <p class="Contactus">Contact Us</p>
+      <p class="contactust">see a bug? Just want to send a note?</p>
+      <p class="contactuslink"><a href="">Let us know</a></p>
+    </div>
+
+  </div>
+
+
+
+</footer>
+
+  </body>
 </html>
+
+
+
+
