--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div class="lin">
       <div class="left">LinuxJourney</div>
-      <div class="right"><img src="https://linuxjourney.com/assets/flags/United_States_of_America-998fb392be75a6bf1d89eb60693ecb40e0e883596f16f02f76a8d2f718a2de7a.png" alt="">Language<select name="" id="count">
+      <div class="right"><img src="https://linuxjourney.com/assets/flags/United_States_of_America-998fb392be75a6bf1d89eb60693ecb40e0e883596f16f02f76a8d2f718a2de7a.png" alt=""><select name="" id="count">
         <!-- <option value="LANGUAGE">LANGAUAGE</option> -->
-        <option value="USA">USA</option>Language
+        <option value="USA">Language</option>
         <option value="FRANCE">FRANCE</option>
         <option value="AUSTRALIA">AUSTRALIA</option>
         <option value="GERMANEY">GERMANEY</option>
